[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/icons/icon.png" type="Texture" id=1]
[ext_resource path="res://src/tasks/ImageTask.gd" type="Script" id=2]

[node name="ImageTask" type="GraphNode"]
margin_right = 184.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 38 )
mouse_filter = 1
title = "Image Task"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 168.0
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="VBoxContainer"]
margin_right = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 152.0
margin_bottom = 24.0
text = "Options"

[connection signal="close_request" from="." to="." method="_on_ImageTask_close_request"]
[connection signal="dragged" from="." to="." method="_on_ImageTask_dragged"]
[connection signal="resize_request" from="." to="." method="_on_ImageTask_resize_request"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
